# fast-task

./: README.md  alembic.ini  app.db  pyproject.toml
app/: config.py  database.py  main.py
app/Model/: models.py
app/Routes/: auth.py  task.py  user.py
app/Schemas/: task.py  user.py
migrations/: env.py
migrations/versions/: b2a7b152e094_add_created_at_and_update_at.py  dd7549b0f829_initial_migration.py  f136b5201fe6_add_task_table.py  f4bd35b5ceab_change_password_length.py
